<resources>
    <string name="app_name">天气</string>
    <string name="action_settings">Settings</string>
    <string name="weather_city">上海市</string>
    <string name="weather_now">阵雨</string>
    <string name="tmp_now">12</string>
    <string name="tmp_icon">°</string>
    <string name="item_hourly_time">18时</string>
    <string name="item_hourly_pop">70%</string>
    <string name="item_hourly_tmp">12°</string>
    <string name="item_daily_day">星期一</string>
    <string name="item_daily_tmp_max">13</string>
    <string name="item_daily_tmp_min">6</string>
    <string name="today">今天</string>
    <string name="weather_desc">今天：现在阵雨，最高气温12°，今晚最低气温11°。</string>
    <string name="sunrise">日出：</string>
    <string name="sunrise_time">06:51</string>
    <string name="sunset">日落：</string>
    <string name="sunset_time">16:58</string>
    <string name="pop_num">60%</string>
    <string name="pop">降雨概率：</string>
    <string name="hum">湿度：</string>
    <string name="hum_num">89%</string>
    <string name="speed">风速：</string>
    <string name="speed_num">东 每秒5米</string>
    <string name="felt">体感温度：</string>
    <string name="felt_num">9°</string>
    <string name="pcpn">降水量：</string>
    <string name="pcpn_num">8.4毫米</string>
    <string name="pres">气压：</string>
    <string name="pres_num">1023百帕</string>
    <string name="vis">能见度：</string>
    <string name="vis_num">4.8公里</string>
    <string name="uv">紫外线指数：</string>
    <string name="uv_num">0</string>
    <string name="aqi">空气质量指数：</string>
    <string name="aqi_num">24</string>
    <string name="qlty">空气质量：</string>
    <string name="qlty_num">良好</string>

    <string name="add_city">添加城市</string>
</resources>
